# CoffeeCode

./: .gitignore  CCFull.cpp  CCSymmetric.cpp  CMakeLists.txt  CoffeeCode.cpp  CoffeeCode.h  LICENSE.md  NautyOrbitIterator.cpp  README.md  build-all.bat  build-all.sh  build-all.sh.in  cc-instance.h  cc-instance.h.in  ctlookup.h  ctmath.h  group.h  libpopcnt.h  matrix.h  nauty-color-generator-vcolg.cpp  nauty-color-generator-vcolg.h  nautyiterator.h  nautylink.h  permutation.h  permutations.h  polynomial.h  sgstransversal.h  traits.h  trivialtransversal.h  types.h  utility.h  vector.h
scripts/: .gitignore  2level-codes.wls  3-5-7-codes.wls  CCInterface.m  CCInterface.nb  CCInterfacePaths.m  CodeTests.nb  ConcatenateStabilizerCodes.nb  LUTs.nb  all-hairs-CC-runcmd.wls  collect-2level-polys.wls  collect-catcote-polys.wls  collect-graph-data.wls  felix-consistency-checks.nb  full-polys-haired.wls  generate-all-hairs-wo-environment-edges.py  generate-all-hairs-wo-environment-edges.wl  generate-all-sys-env-graphs.py  make-build-dir.sh  p_values.m  p_values.nb  postprocess-3dplot-mpmath.py  postprocess-3dplot.py  postprocess-layerplot.py  render-3dplot.blend  run-all2level.wls  run-dep-all2level.wls  run-layers.sh  run-pp3d.sh  run.sh  run2-pp3d.sh  sage-python.sh  show-3dplot-mayavi.ipynb  show-3dplot.ipynb  show-layerplot-mayavi.ipynb  tree_sa.nb  tree_sa_script.wls
scripts/pp3d/: .gitignore  CMakeLists.txt  pp3d.cpp
